--- a/User Mangement/Views/Auth/LoginUser.cshtml
+++ b/User Mangement/Views/Auth/LoginUser.cshtml
@@ -7,19 +7,19 @@
         <form asp-action="LoginUser" method="post">
             <div class="form-group mb-3 w-100">
                 <label asp-for="EmailId" class="form-lable mb-2">
-                    Email Id
+                    Email Id*
                 </label>
                 <input asp-for="EmailId" class="form-control w-100" placeholder="Email Id" type="email" />
                 <span asp-validation-for="EmailId" class="text-warning mt-1"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="Password" class="form-lable mb-2">
-                    Password
+                    Password*
                 </label>
                 <input asp-for="Password" class="form-control" placeholder="Password" type="password"/>
                 <span asp-validation-for="Password" class="text-warning mt-1"></span>
             </div>
-            <div asp-validation-summary="All" class="text-danger"></div>
+            @* <div asp-validation-summary="All" class="text-danger"></div> *@
             <div class="d-flex justify-content-between">
                 <button class="btn btn-success" type="submit">Login</button>
             </div>
