--- a/User Mangement/Views/Auth/RegisterUser.cshtml
+++ b/User Mangement/Views/Auth/RegisterUser.cshtml
@@ -10,28 +10,28 @@
         <form asp-action="RegisterUser" method="post">
             <div class="form-group mb-3">
                 <label asp-for="FirstName" class="form-lable mb-2">
-                    FirstName
+                    FirstName*
                 </label>
                 <input asp-for="FirstName" class="form-control"  placeholder="FirstName"/>
                 <span asp-validation-for="FirstName" class="text-warning mt-1"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="LastName" class="form-lable mb-2">
-                    LastName
+                    LastName*
                 </label>
                 <input asp-for="LastName" class="form-control" placeholder="LastName" type="text"/>
                 <span asp-validation-for="LastName" class="text-warning mt-1"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="DOB" class="form-lable mb-2">
-                    DOB
+                    DOB*
                 </label>
                 <input asp-for="DOB" class="form-control" placeholder="" type="date"/>
                 <span asp-validation-for="DOB" class="text-warning mt-1"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="Gender" class="form-lable mb-2">
-                    Gender
+                    Gender*
                 </label>
                 <select asp-for="Gender" class="d-block" >
                     <option value="">Please Select</option>
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group mb-3">
                 <label asp-for="EmailAddress" class="form-lable mb-2">
-                    Email Id
+                    Email Id *
                 </label>
                 <input asp-for="EmailAddress" class="form-control" placeholder="Email Id" type="text"/>
                 <span asp-validation-for="EmailAddress" class="text-warning mt-1"></span>
