--- a/User Mangement/Views/Users/Edit.cshtml
+++ b/User Mangement/Views/Users/Edit.cshtml
@@ -27,7 +27,7 @@
                             <label asp-for="DOB" class="form-label">
                                 Date of Birth
                             </label>
-                            <input asp-for="DOB" class="form-control" type="date" value=@Model.DOB />
+                            <input asp-for="DOB" class="form-control" type="DateOnly" value=@Model.DOB />
                             <span asp-validation-for="DOB" class="text-warning mt-1"></span>
                         </div>
                         <div class="form-group mb-3">
@@ -50,7 +50,7 @@
                             <span asp-validation-for="EmailAddress" class="text-warning mt-1"></span>
                         </div>
                         <div class="d-flex justify-content-between">
-                            <button class="btn btn-success" type="submit">Edit</button>
+                            <button class="btn btn-success" type="submit">Update</button>
                             <a asp-controller="Users" asp-action="Users" class="btn btn-warning">Cancel</a>
                         </div>
                     </form>
