--- a/User Mangement/Views/Auth/LoginUser.cshtml
+++ b/User Mangement/Views/Auth/LoginUser.cshtml
@@ -1,7 +1,8 @@
 ﻿@model UserLoginDTO
-<div class="container w-25 mt-5" style="margin-bottom:200px;">
-    <div class="p-2 bg-info-subtle text-black rounded-3">
-        <h3 class="text-center font-monospace text-dark">Login</h3>
+<div class="container d-flex align-content-center justify-content-center mt-4">
+<div class="card shadow-lg p-4 border border-secondary rounded-4" style="width:480px;">
+    <div class="p-2 text-black rounded-3">
+        <h3 class="text-center font-monospace text-dark fs-3 fw-bold">Login</h3>
     </div>
     <div class="card-body m-5 w-75">
         <form asp-action="LoginUser" method="post">
@@ -19,19 +20,17 @@
                 <input asp-for="Password" class="form-control" placeholder="Password" type="password"/>
                 <span asp-validation-for="Password" class="text-warning mt-1"></span>
             </div>
-            @* <div asp-validation-summary="All" class="text-danger"></div> *@
-            <div class="d-flex justify-content-between">
-                <button class="btn btn-success" type="submit">Login</button>
+                <div asp-validation-for="EmailId" class="text-danger"></div>
+                <div asp-validation-for="Password" class="text-danger"></div>
+                <div class="d-flex justify-content-between">
+                <button class="btn btn-success w-100" type="submit">Login</button>
             </div>
-            <div class="d-flex mt-2 justify-content-between text-danger">
-                <span stye="margin-right:-10px;"> Don't have an account?  <a asp-controller="Auth" asp-action="RegisterUser">Register</a></span>
-                </div>
-                <div class="d-flex mt-2 justify-content-between text-danger">
-                <span stye="margin-right:-10px;"> Forgot Password ? 
-                    <br/>
-                    <a asp-controller="Auth" asp-action="RetrivePassword">Forget Password</a>
-                </span>
+            <div class="mt-2 text-danger">
+                <span class="fs-6"> Don't have an account?  <a asp-controller="Auth" asp-action="RegisterUser">Register</a></span>
+                <br />
+                <span stye=""> Forgot Password ? <a asp-controller="Auth" asp-action="RetrivePassword">Forget Password</a></span>
             </div>
         </form>
     </div>
+</div>
 </div>
