--- a/User Mangement/Views/Auth/Password.cshtml
+++ b/User Mangement/Views/Auth/Password.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PasswordDetailsDTO
-<div class="container w-25 mt-5 ">
-    <div class="p-2 bg-info-subtle text-black rounded-3">
+<div class="container d-flex align-content-center justify-content-center mt-4">
+    <div class="card shadow-lg p-4 border border-secondary rounded-4" style="width:480px; ">
+    <div class="p-2 text-black rounded-3">
         <h3 class="text-center font-monospace text-dark">Set Password</h3>
     </div>
     <div class="card-body m-3">
@@ -22,8 +23,9 @@
                 <span class="text-danger" asp-validation-for="ConfirmPassword"></span>
             </div>
             <div class="d-flex justify-content-between">
-                <button class="btn btn-success" type="submit">Set Password</button>
+                <button class="btn btn-success w-100" type="submit">Set Password</button>
             </div>
         </form>
     </div>
+</div>
 </div>
