--- a/User Mangement/Views/Auth/RegisterUser.cshtml
+++ b/User Mangement/Views/Auth/RegisterUser.cshtml
@@ -1,10 +1,12 @@
 ﻿@model UserDetails
+
+<div class="container d-flex align-content-center justify-content-center">
  <div><h4 class="text-danger">@ViewBag.Message</h4> </div>
         @if (ViewBag.Message == null)
         {
-<div class="container w-25 mt-5 ">
-    <div class="p-2 bg-info-subtle text-black rounded-3">
-        <h3 class="text-center font-monospace text-dark">Register</h3>
+        <div class="card shadow-lg border border-secondary rounded-4" style="width:480px;">
+    <div class="p-2 bg- text-black rounded-3">
+                <h3 class="text-center font-monospace text-dark fs-3 fw-bold">Register</h3>
     </div>
     <div class="card-body m-3">
         <form asp-action="RegisterUser" method="post">
@@ -50,13 +52,13 @@
             </div>
             @* <div asp-validation-summary="All" class="text-danger"></div> *@
             <div class="d-flex justify-content-between">
-                <button class="btn btn-success" type="submit">Register</button>
+                <button class="btn btn-success w-100" type="submit">Register</button>
             </div>
-            <div class="d-flex mt-2 justify-content-between text-danger">
-                <span> Already have an account?</span>
-                <a asp-controller="Auth" asp-action="LoginUser">Login</a>
+            <div class="d-flex mt-5 justify-content-between text-danger">
+                        <span> Already have an account? <a asp-controller="Auth" asp-action="LoginUser">Login</a></span>
             </div>
         </form>
     </div>
 </div>
         } 
+        </div>
