--- a/User Mangement/Views/Users/Users.cshtml
+++ b/User Mangement/Views/Users/Users.cshtml
@@ -1,26 +1,29 @@
 ﻿@model List<UserDetails>
-<div class="Container">
-    <div class="row pt-4">
-        <div class="col-6 text-end ms-5">
-            <h2  >User Management</h2>
-        <form action="Users" method="post">
-            <input id="search bar" type="text" name="userName" placeholder="Enter the person name"/>
-            <button type="submit" class="btn-primary">Search</button>
-        </form>
+<div class="container">
+    <div class="row pt-4 align-items-center">
+        <div class="col-md-6">
+            <h2 class="mb-0">User Management</h2>
+        </div>
+        <div class="col-md-6 text-end">
+            <form action="Users" method="post" class="d-inline-flex">
+                <input type="text" name="userName" placeholder="Enter the person name" class="form-control me-2" />
+                <button type="submit" class="btn btn-primary">Search</button>
+            </form>
         </div>
     </div>
 </div>
-<div class="table-responsive">
+
+<div class="table-responsive mt-4">
     <table class="table table-striped table-hover">
         <thead>
-            <tr>
-                <th>FirstName</th>
-                <th>LastName</th>
-                <th>Date of Birth</th>
-                <th>Gender</th>
-                <th>Email Address</th>
-                <th>Edit</th>
-                <th>Details</th>
+            <tr class="bg-secondary">
+                <th class="text-bg-dark">FirstName</th>
+                <th class="text-bg-dark">LastName</th>
+                <th class="text-bg-dark">Date of Birth</th>
+                <th class="text-bg-dark">Gender</th>
+                <th class="text-bg-dark">Email Address</th>
+                <th class="text-bg-dark">Edit</th>
+                <th class="text-bg-dark">Details</th>
             </tr>
         </thead>
         <tbody>
